--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/_GridViewPartial_AprobacionOP.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/_GridViewPartial_AprobacionOP.cshtml
@@ -53,7 +53,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "Total_OP";
-            column.Caption = "$Valor";
+            column.Caption = "Valor";
             column.Width = Unit.Percentage(10);
             column.EditorProperties().SpinEdit(sp =>
             {
