--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
@@ -1,4 +1,5 @@
-﻿@model Core.Erp.Info.RRHH.ro_empleado_Info
+﻿@using System.Web.UI.WebControls;
+@model Core.Erp.Info.RRHH.ro_empleado_Info
 @{
     ViewBag.Title = "Modificar empleado";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -24,42 +25,119 @@
     @Html.HiddenFor(q => q.IdPersona);
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdEmpleado);
-   
     <div class="row">
         <div class="col-md-12">
-            @*<div class="col-md-2" height="100" width="100" style="border:solid">
-                    <label for="foto">Foto*</label>
-                    <div class="form-group">
-                        @Html.EditorFor(q => q.em_foto, new { @class = "form-control" })
-                    </div>
-                </div>*@
 
-            <div class="col-md-3">
+
+            <div class="col-md-2">
+
+
+
+                <script type="text/javascript">
+                    function onUploadControlFileUploadComplete(s, e) {
+                        if (e.isValid)
+                            $("#uploadedImage").attr("src", e.callbackData);
+                        setElementVisible("uploadedImage", e.isValid);
+                    }
+                    function onImageLoad() {
+                        var externalDropZone = $("#externalDropZone");
+                        var uploadedImage = $("#uploadedImage");
+                        uploadedImage.css({
+                            left: (externalDropZone.width() - uploadedImage.width()) / 4,
+                            top: (externalDropZone.height() - uploadedImage.height()) / 4
+                        });
+                        setElementVisible("dragZone", false);
+                    }
+                    function setElementVisible(elementId, visible) {
+                        var el = $("#" + elementId);
+                        if (visible)
+                            el.show();
+                        else
+                            el.hide();
+                    }
+                </script>
+                <div id="externalDropZone" class="dropZoneExternal">
+                    <div id="dragZone">
+                        <span class="dragZoneText">Seleccione una foto</span>
+                    </div>
+                    <img id="uploadedImage" src="#" alt="" style="display: none" onload="onImageLoad()" />
+                    <div id="dropZone" style="display: none">
+                        <span class="dropZoneText">Drop an image here</span>
+                    </div>
+                </div>
+
+                <div class="uploadContainer">
+                    @Html.DevExpress().UploadControl(settings => {
+                   settings.ShowProgressPanel = true;
+                   settings.CallbackRouteValues = new { Controller = "Empleado", Action = "DragAndDropImageUpload" };
+                   settings.Name = "ucDragAndDrop";
+                   settings.UploadMode = UploadControlUploadMode.Auto;
+                   settings.AutoStartUpload = true;
+                   settings.Width = Unit.Percentage(70);
+                   settings.DialogTriggerID = "externalDropZone";
+                   settings.AdvancedModeSettings.EnableDragAndDrop = true;
+                   settings.AdvancedModeSettings.EnableFileList = false;
+                   settings.AdvancedModeSettings.EnableMultiSelect = false;
+                   settings.AdvancedModeSettings.ExternalDropZoneID = "externalDropZone";
+                   settings.AdvancedModeSettings.DropZoneText = "";
+                   settings.ValidationSettings.MaxFileSize = 4194304;
+                   settings.ValidationSettings.AllowedFileExtensions = new string[] {".jpg", ".jpeg", ".gif", ".png"};
+                   settings.ValidationSettings.ErrorStyle.CssClass = "validationMessage";
+                  // settings.BrowseButton.Text = "Select an image for upload...";
+                   settings.Styles.DropZone.CssClass = "uploadControlDropZone";
+                   settings.ClientSideEvents.DropZoneEnter = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', true); }";
+                   settings.ClientSideEvents.DropZoneLeave = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', false); }";
+                   settings.ClientSideEvents.FileUploadComplete = "onUploadControlFileUploadComplete";
+               }).GetHtml()
+                </div>
+
+            </div>
+
+
+
+
+
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="em_status">Estado*</label>
                     @Html.DropDownListFor(q => q.em_status, new SelectList(ViewBag.lst_estado_empleado, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.em_status, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdTipoDocumento">Tipo documento*</label>
-                    @Html.DropDownListFor(q => q.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control", @id = "IdTipoDocumento" })
                     @Html.ValidationMessageFor(q => q.IdTipoDocumento, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
-                    <label for="pe_cedulaRuc">Código</label>
+                    <label for="em_codigo">Código</label>
                     @Html.TextBoxFor(q => q.em_codigo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.em_codigo, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
+                    @Html.ValidationMessageFor(q => q.em_codigo, "", new { @class = "text-danger", @id = "em_codigo" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="pe_cedulaRuc">Número documento*</label>
-                    @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
+                    @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control", @id = "pe_cedulaRuc" })
+                    @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-10">
+                <div class="form-group">
+                    <label for="pe_apellido">Apellidos*</label>
+                    @Html.TextBoxFor(q => q.pe_apellido, new { @class = "form-control", @id = "pe_apellido" })
+                    @Html.ValidationMessageFor(q => q.pe_apellido, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-10">
+                <div class="form-group">
+                    <label for="pe_nombre">Nombres*</label>
+                    @Html.TextBoxFor(q => q.pe_nombre, new { @class = "form-control", @id = "pe_nombre" })
+                    @Html.ValidationMessageFor(q => q.pe_nombre, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -68,21 +146,7 @@
     <div class="row">
         <div class="col-md-12">
 
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="pe_apellido">Apellidos*</label>
-                    @Html.TextBoxFor(q => q.pe_apellido, new { @class = "form-control", @id = "pe_apellido" })
-                    @Html.ValidationMessageFor(q => q.pe_apellido, "", new { @class = "text-danger" })
-                </div>
-            </div>
 
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="pe_nombre">Nombres*</label>
-                    @Html.TextBoxFor(q => q.pe_nombre, new { @class = "form-control", @id = "pe_nombre" })
-                    @Html.ValidationMessageFor(q => q.pe_nombre, "", new { @class = "text-danger" })
-                </div>
-            </div>
         </div>
     </div>
     <div id="Tabs" role="tabpanel">
@@ -100,9 +164,7 @@
             <li>
                 <a href="#tb_info_adicional" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Información adicional</a>
             </li>
-            <li>
-                <a href="#tb_info_foto" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Foto del empleado</a>
-            </li>
+
         </ul>
         <!-- Tab panes -->
         <div class="tab-content" style="padding-top: 20px">
@@ -174,15 +236,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q=> q.pe_fechaNacimiento, settings =>
-                            {
-                                settings.Name = "pe_fechaNacimiento";
-                                settings.Properties.UseMaskBehavior = true;
-                                settings.Properties.EditFormat = EditFormat.Date;
-                                settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                            }).GetHtml()
+                                @Html.DevExpress().DateEditFor(q => q.pe_fechaNacimiento, settings =>
+                           {
+                               settings.Name = "pe_fechaNacimiento";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.pe_fechaNacimiento, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -206,7 +268,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="em_lugarNacimiento">Luar nacimiento*</label>
+                            <label for="em_lugarNacimiento">Lugar nacimiento*</label>
                             @Html.TextBoxFor(q => q.em_lugarNacimiento, new { @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.em_lugarNacimiento, "", new { @class = "text-danger" })
                         </div>
@@ -411,6 +473,8 @@
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_info_nomina">
+
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-4">
@@ -581,13 +645,19 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_info_adicional">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="IdCondicionDiscapacidadSRI">Condición de empleado con respecto a discapacidad</label>
+                            <label for="IdCondicionDiscapacidadSRI">Condición de empleado conrespecto a discapacidad</label>
                             @Html.DevExpress().ComboBoxFor(q => q.IdCondicionDiscapacidadSRI, settings =>
                                {
                                    settings.Name = "IdCondicionDiscapacidadSRI";
@@ -628,24 +698,24 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <label for="IdTipoIdentDiscapacitadoSustitutoSRI">Tipo documento persona sustituida</label>
+                            <label for="IdCiudad">Tipo documento persona sustituida</label>
                             @Html.DevExpress().ComboBoxFor(q => q.IdTipoIdentDiscapacitadoSustitutoSRI, settings =>
-                       {
-                           settings.Name = "IdTipoIdentDiscapacitadoSustitutoSRI";
-                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("CodCatalogo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                           settings.Properties.Columns.Add("ca_descripcion", "Desripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                           //Campo ID
-                           settings.Properties.ValueField = "CodCatalogo";
-                           settings.Properties.ValueType = typeof(string);
-                           settings.Properties.TextField = "ca_descripcion";
-                           //Boton para seleccionar ningun registro
-                           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                           settings.Properties.NullText = "== Seleccione ==";
-                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                               {
+                                   settings.Name = "IdTipoIdentDiscapacitadoSustitutoSRI";
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   settings.Properties.DisplayFormatString = "[{0}] - {2}";
+                                   settings.Properties.Columns.Add("CodCatalogo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                                   settings.Properties.Columns.Add("ca_descripcion", "Desripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                                   //Campo ID
+                                   settings.Properties.ValueField = "CodCatalogo";
+                                   settings.Properties.ValueType = typeof(string);
+                                   settings.Properties.TextField = "ca_descripcion";
+                                   //Boton para seleccionar ningun registro
+                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                                   settings.Properties.NullText = "== Seleccione ==";
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
-                       }).BindList(ViewBag.lst_tipo_doc_sustutuido).GetHtml()
+                               }).BindList(ViewBag.lst_tipo_doc_sustutuido).GetHtml()
                             @Html.ValidationMessageFor(q => q.IdTipoIdentDiscapacitadoSustitutoSRI, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -713,34 +783,7 @@
                 </div>
             </div>
 
-            <div role="tabpanel" class="tab-pane" id="tb_info_foto">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
 
-
-                            @Html.DevExpress().BinaryImage(
-                            settings =>
-                            {
-                                settings.Name = "em_foto";
-                                settings.CallbackRouteValues = new { Controller = "Empleado", Action = "get_imagen" };
-                            }).Bind((Model.em_foto).ToArray()).GetHtml()
-
-
-                            @Html.DevExpress().UploadControl(settings =>
-                       {
-
-                           settings.Name = "UploadControl";
-                           settings.CallbackRouteValues = new { Controller = "Empleado", Action = "UploadControlUpload" };
-                           settings.ShowUploadButton = true;
-                           settings.ShowProgressPanel = true;
-                       }).GetHtml()
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
 
         </div>
     </div>
@@ -752,14 +795,14 @@
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
+        <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/bootstrap_imagenes.css")" />
+
     }
 
 }
 
 
 <script>
-
-
     $("#pe_cedulaRuc").keyup(function () {
         validar();
     });
@@ -784,6 +827,16 @@
                 }
             }
     }
+
+    function mostrar_horas() {
+        if (!Pago_por_horas.GetValue()) {
+            $("#horas").show();
+
+        }
+        else {
+            $("#horas").hide();
+        }
+    };
 
 
 </script>
