--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
@@ -151,7 +151,142 @@
                                    }).GetHtml()
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdTipo_op">Tipo orden sueldo por pagar*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_sueldo_por_pagar, settings =>
+                                   {
+                                       settings.Name = "IdTipo_op_sueldo_por_pagar";
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                       settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                       settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                       //Campo ID
+                                       settings.Properties.ValueField = "IdTipo_op";
+                                       settings.Properties.ValueType = typeof(string);
+                                       settings.Properties.TextField = "Descricpion";
+                                       //Boton para seleccionar ningun registro
+                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                @Html.ValidationMessageFor(q => q.IdTipo_op_sueldo_por_pagar, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="genera_op_x_pago">Genera OP al generar prestamos</label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Genera_op_por_prestamos, settings =>
+                                     {
+                                         settings.Name = "Genera_op_por_prestamos";
+                                     }).GetHtml()
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdTipo_op">Tipo OP para prestamos*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_prestamos, settings =>
+                                   {
+                                       settings.Name = "IdTipo_op_prestamos";
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                       settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                       settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                       //Campo ID
+                                       settings.Properties.ValueField = "IdTipo_op";
+                                       settings.Properties.ValueType = typeof(string);
+                                       settings.Properties.TextField = "Descricpion";
+                                       //Boton para seleccionar ningun registro
+                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                @Html.ValidationMessageFor(q => q.IdTipo_op_prestamos, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="genera_op_x_pago">Genera OP al generar acta finiquito</label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Genera_op_por_acta_finiquito, settings =>
+                                     {
+                                         settings.Name = "Genera_op_por_acta_finiquito";
+                                     }).GetHtml()
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdTipo_op">Tipo OP para actas finiquito*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_acta_finiquito, settings =>
+                                   {
+                                       settings.Name = "IdTipo_op_acta_finiquito";
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                       settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                       settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                       //Campo ID
+                                       settings.Properties.ValueField = "IdTipo_op";
+                                       settings.Properties.ValueType = typeof(string);
+                                       settings.Properties.TextField = "Descricpion";
+                                       //Boton para seleccionar ningun registro
+                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                @Html.ValidationMessageFor(q => q.IdTipo_op_acta_finiquito, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="genera_op_x_pago">Genera OP por liquidacion vacaciones</label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Genera_op_por_liq_vacaciones, settings =>
+                                     {
+                                         settings.Name = "Genera_op_por_liq_vacaciones";
+                                     }).GetHtml()
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdTipo_op">Tipo OP para liquidacion vacaciones*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_vacaciones, settings =>
+                                   {
+                                       settings.Name = "IdTipo_op_vacaciones";
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                       settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                       settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                       //Campo ID
+                                       settings.Properties.ValueField = "IdTipo_op";
+                                       settings.Properties.ValueType = typeof(string);
+                                       settings.Properties.TextField = "Descricpion";
+                                       //Boton para seleccionar ningun registro
+                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                                   }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                                @Html.ValidationMessageFor(q => q.IdTipo_op_vacaciones, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
