--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_ordenes_pagos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_ordenes_pagos.cshtml
@@ -50,7 +50,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
+            if (Convert.ToString(e.GetValue("Estado")) == "I" || Convert.ToString(e.GetValue("IdEstadoAprobacion")) == "REPRO")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -67,14 +67,18 @@
             c.SetDataItemTemplateContent(tc =>
             {
 
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A" && Convert.ToString(DataBinder.Eval(tc.DataItem, "IdEstadoAprobacion")) == "PENDI")
                 {
 
                     ViewContext.Writer.Write(
-                    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdOrdenPago = DataBinder.Eval(tc.DataItem, "IdOrdenPago") }
-
-
-                    ) + "&nbsp;" +
+                    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdOrdenPago = DataBinder.Eval(tc.DataItem, "IdOrdenPago") }) + "&nbsp;" +
+                    Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdOrdenPago = DataBinder.Eval(tc.DataItem, "IdOrdenPago") },
+                    new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    );
+                }
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A" && Convert.ToString(DataBinder.Eval(tc.DataItem, "IdEstadoAprobacion")) == "APRO")
+                {
+                    ViewContext.Writer.Write(
                     Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdOrdenPago = DataBinder.Eval(tc.DataItem, "IdOrdenPago") },
                     new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
