--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuesto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuesto.cshtml
@@ -82,11 +82,11 @@
 
 
         settings.Columns.Add("IdPresupuesto", "Código").Width = Unit.Percentage(5);
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
-        settings.Columns.Add("DescripcionPeriodo", "Periodo").Width = Unit.Percentage(15);
-        settings.Columns.Add("Descripcion", "Grupo").Width = Unit.Percentage(15);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
+        settings.Columns.Add("DescripcionPeriodo", "Periodo").Width = Unit.Percentage(20);
+        settings.Columns.Add("Descripcion", "Grupo").Width = Unit.Percentage(20);
         settings.Columns.Add("MontoSolicitado", "Monto Solicitado").Width = Unit.Percentage(10);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
+        settings.Columns.Add("MontoAprobado", "Monto Aprobado").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Estado";
