--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
@@ -467,7 +467,7 @@
                     <label for="IdRubro_prov_vac">Rubro horas brigada*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_brigadas, settings =>
                {
-                   settings.Name = "IdRubro_horas_nocturna";
+                   settings.Name = "IdRubro_horas_brigadas";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
                    settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
