--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Nuevo.cshtml
@@ -137,7 +137,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="detalle">Detalle de la novedad</label>
+                    <label for="detalle">Detalle de horas</label>
                     @Html.Action("GridViewPartial_importacion_horas_det")
                     @Html.ValidationMessageFor(q => q.detalle, "", new { @class = "text-danger" })
                 </div>
