--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Duplicar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Duplicar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_HorasProfesores_Info
 @{
-    ViewBag.Title = "Nueva carga de horas";
+    ViewBag.Title = "Duplicar carga de horas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
