--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Importar.cshtml
@@ -30,7 +30,7 @@
     function OnFileUploadComplete(s, e)
     {
         GridView_plancta_importacion.PerformCallback();
-        GridView_anio_fiscal_importacion.PerformCallBack();
+        GridView_anio_fiscal_importacion.PerformCallback();
     }
 </script>
 
